--- a/index.html
+++ b/index.html
@@ -1,110 +1,67 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <meta name="theme-color" content="#10b981" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <meta name="apple-mobile-web-app-title" content="FinanceFamily" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FinanceFamily - Kelola Keuangan Keluarga Anda</title>
+    <meta name="description" content="Aplikasi manajemen keuangan keluarga yang membantu Anda mengelola pemasukan, pengeluaran, anggaran, dan tujuan keuangan dengan mudah">
+    <meta name="keywords" content="keuangan keluarga, manajemen keuangan, anggaran, pemasukan, pengeluaran">
+    <meta property="og:title" content="FinanceFamily - Kelola Keuangan Keluarga Anda">
+    <meta property="og:description" content="Aplikasi manajemen keuangan keluarga yang membantu Anda mengelola pemasukan, pengeluaran, anggaran, dan tujuan keuangan dengan mudah">
+    <meta name="twitter:title" content="FinanceFamily - Kelola Keuangan Keluarga Anda">
+    <meta name="twitter:description" content="Aplikasi manajemen keuangan keluarga yang membantu Anda mengelola pemasukan, pengeluaran, anggaran, dan tujuan keuangan dengan mudah">
 
-  <title>FinanceFamily - Kelola Keuangan Keluarga Anda</title>
-  <meta name="description" content="Aplikasi manajemen keuangan keluarga yang membantu Anda mengelola pemasukan, pengeluaran, anggaran, dan tujuan keuangan dengan mudah" />
-  <meta name="keywords" content="keuangan keluarga, manajemen keuangan, anggaran, pemasukan, pengeluaran" />
-  <meta property="og:title" content="FinanceFamily - Kelola Keuangan Keluarga Anda" />
-  <meta property="og:description" content="Aplikasi manajemen keuangan keluarga yang membantu Anda mengelola pemasukan, pengeluaran, anggaran, dan tujuan keuangan dengan mudah" />
-  <meta name="twitter:title" content="FinanceFamily - Kelola Keuangan Keluarga Anda" />
-  <meta name="twitter:description" content="Aplikasi manajemen keuangan keluarga yang membantu Anda mengelola pemasukan, pengeluaran, anggaran, dan tujuan keuangan dengan mudah" />
+    <script src="https://resource.trickle.so/vendor_lib/unpkg/react@18/umd/react.production.min.js"></script>
+    <script src="https://resource.trickle.so/vendor_lib/unpkg/react-dom@18/umd/react-dom.production.min.js"></script>
+    <script src="https://resource.trickle.so/vendor_lib/unpkg/@babel/standalone/babel.min.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://resource.trickle.so/vendor_lib/unpkg/lucide-static@0.516.0/font/lucide.css" rel="stylesheet">
 
-  <!-- React + Babel + Tailwind -->
-  <script src="https://resource.trickle.so/vendor_lib/unpkg/react@18/umd/react.production.min.js"></script>
-  <script src="https://resource.trickle.so/vendor_lib/unpkg/react-dom@18/umd/react-dom.production.min.js"></script>
-  <script src="https://resource.trickle.so/vendor_lib/unpkg/@babel/standalone/babel.min.js"></script>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://resource.trickle.so/vendor_lib/unpkg/lucide-static@0.516.0/font/lucide.css" rel="stylesheet" />
-
-  <style type="text/tailwindcss">
+    <style type="text/tailwindcss">
     @layer theme {
-      :root {
-        --primary-color: #10b981;
-        --secondary-color: #059669;
-        --accent-color: #34d399;
-        --background: #ffffff;
-        --surface: #f9fafb;
-        --text-primary: #111827;
-        --text-secondary: #6b7280;
-        --border-color: #e5e7eb;
-      }
+        :root {
+            --primary-color: #10b981;
+            --secondary-color: #059669;
+            --accent-color: #34d399;
+            --background: #ffffff;
+            --surface: #f9fafb;
+            --text-primary: #111827;
+            --text-secondary: #6b7280;
+            --border-color: #e5e7eb;
+        }
     }
 
     @layer base {
-      body {
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-        color: var(--text-primary);
-        background-color: var(--background);
-        -webkit-tap-highlight-color: transparent;
-        overflow-x: hidden;
-      }
-
-      h1, h2, h3, h4 {
-        @apply font-bold leading-tight;
-      }
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+            color: var(--text-primary);
+            background-color: var(--background);
+        }
     }
 
     @layer components {
-      .btn-primary {
-        @apply w-full sm:w-auto px-5 py-3 bg-gradient-to-r from-[var(--primary-color)] to-[var(--secondary-color)] text-white rounded-lg font-semibold hover:shadow-lg hover:scale-105 active:scale-95 transition-all duration-300;
-      }
-      .btn-secondary {
-        @apply w-full sm:w-auto px-5 py-3 bg-white text-[var(--primary-color)] border-2 border-[var(--primary-color)] rounded-lg font-semibold hover:bg-gradient-to-r hover:from-[var(--primary-color)] hover:to-[var(--secondary-color)] hover:text-white hover:shadow-lg transition-all duration-300;
-      }
-      .card-hover {
-        @apply transition-all duration-300 hover:shadow-2xl hover:-translate-y-2 rounded-2xl;
-      }
-      .gradient-bg {
-        @apply bg-gradient-to-br from-green-50 via-emerald-50 to-teal-50;
-      }
-      .container-responsive {
-        @apply px-4 sm:px-6 md:px-10 lg:px-16;
-      }
+        .btn-primary {
+            @apply px-6 py-3 bg-gradient-to-r from-[var(--primary-color)] to-[var(--secondary-color)] text-white rounded-lg font-semibold hover:shadow-lg hover:scale-105 transition-all duration-300;
+        }
+        .btn-secondary {
+            @apply px-6 py-3 bg-white text-[var(--primary-color)] border-2 border-[var(--primary-color)] rounded-lg font-semibold hover:bg-gradient-to-r hover:from-[var(--primary-color)] hover:to-[var(--secondary-color)] hover:text-white hover:shadow-lg transition-all duration-300;
+        }
+        .card-hover {
+            @apply transition-all duration-300 hover:shadow-2xl hover:-translate-y-2;
+        }
+        .gradient-bg {
+            @apply bg-gradient-to-br from-green-50 via-emerald-50 to-teal-50;
+        }
     }
-
-    @layer utilities {
-      .mobile-padding {
-        padding-left: 1rem;
-        padding-right: 1rem;
-      }
-    }
-
-    /* Responsif untuk layar kecil (iPhone & Android) */
-    @media (max-width: 640px) {
-      h1 {
-        font-size: 1.75rem;
-      }
-      h2 {
-        font-size: 1.4rem;
-      }
-      .btn-primary,
-      .btn-secondary {
-        font-size: 0.95rem;
-        padding: 0.75rem 1rem;
-      }
-      .card-hover {
-        margin-bottom: 1rem;
-      }
-    }
-  </style>
+    </style>
 </head>
-
-<body class="gradient-bg">
-  <div id="root" class="max-w-screen-xl mx-auto"></div>
-
-  <!-- Komponen React -->
-  <script type="text/babel" src="components/Header.js"></script>
-  <script type="text/babel" src="components/Hero.js"></script>
-  <script type="text/babel" src="components/Features.js"></script>
-  <script type="text/babel" src="components/Pricing.js"></script>
-  <script type="text/babel" src="components/Footer.js"></script>
-  <script type="text/babel" src="app.js"></script>
+<body>
+    <div id="root"></div>
+    <script type="text/babel" src="components/Header.js"></script>
+    <script type="text/babel" src="components/Hero.js"></script>
+    <script type="text/babel" src="components/Features.js"></script>
+    <script type="text/babel" src="components/Pricing.js"></script>
+    <script type="text/babel" src="components/Footer.js"></script>
+    <script type="text/babel" src="app.js"></script>
 </body>
 </html>
