--- a/index.html
+++ b/index.html
@@ -1,67 +1,127 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FinanceFamily - Kelola Keuangan Keluarga Anda</title>
-    <meta name="description" content="Aplikasi manajemen keuangan keluarga yang membantu Anda mengelola pemasukan, pengeluaran, anggaran, dan tujuan keuangan dengan mudah">
-    <meta name="keywords" content="keuangan keluarga, manajemen keuangan, anggaran, pemasukan, pengeluaran">
-    <meta property="og:title" content="FinanceFamily - Kelola Keuangan Keluarga Anda">
-    <meta property="og:description" content="Aplikasi manajemen keuangan keluarga yang membantu Anda mengelola pemasukan, pengeluaran, anggaran, dan tujuan keuangan dengan mudah">
-    <meta name="twitter:title" content="FinanceFamily - Kelola Keuangan Keluarga Anda">
-    <meta name="twitter:description" content="Aplikasi manajemen keuangan keluarga yang membantu Anda mengelola pemasukan, pengeluaran, anggaran, dan tujuan keuangan dengan mudah">
+  <meta charset="UTF-8" />
+  <meta 
+    name="viewport" 
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
+  />
+  <title>FinanceFamily - Kelola Keuangan Keluarga Anda</title>
+  <meta
+    name="description"
+    content="Aplikasi manajemen keuangan keluarga yang membantu Anda mengelola pemasukan, pengeluaran, anggaran, dan tujuan keuangan dengan mudah"
+  />
+  <meta
+    name="keywords"
+    content="keuangan keluarga, manajemen keuangan, anggaran, pemasukan, pengeluaran"
+  />
 
-    <script src="https://resource.trickle.so/vendor_lib/unpkg/react@18/umd/react.production.min.js"></script>
-    <script src="https://resource.trickle.so/vendor_lib/unpkg/react-dom@18/umd/react-dom.production.min.js"></script>
-    <script src="https://resource.trickle.so/vendor_lib/unpkg/@babel/standalone/babel.min.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://resource.trickle.so/vendor_lib/unpkg/lucide-static@0.516.0/font/lucide.css" rel="stylesheet">
+  <!-- SEO + Social -->
+  <meta property="og:title" content="FinanceFamily - Kelola Keuangan Keluarga Anda" />
+  <meta
+    property="og:description"
+    content="Aplikasi manajemen keuangan keluarga yang membantu Anda mengelola pemasukan, pengeluaran, anggaran, dan tujuan keuangan dengan mudah"
+  />
+  <meta name="twitter:title" content="FinanceFamily - Kelola Keuangan Keluarga Anda" />
+  <meta
+    name="twitter:description"
+    content="Aplikasi manajemen keuangan keluarga yang membantu Anda mengelola pemasukan, pengeluaran, anggaran, dan tujuan keuangan dengan mudah"
+  />
 
-    <style type="text/tailwindcss">
+  <!-- React + Babel + Tailwind -->
+  <script src="https://resource.trickle.so/vendor_lib/unpkg/react@18/umd/react.production.min.js"></script>
+  <script src="https://resource.trickle.so/vendor_lib/unpkg/react-dom@18/umd/react-dom.production.min.js"></script>
+  <script src="https://resource.trickle.so/vendor_lib/unpkg/@babel/standalone/babel.min.js"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link
+    href="https://resource.trickle.so/vendor_lib/unpkg/lucide-static@0.516.0/font/lucide.css"
+    rel="stylesheet"
+  />
+
+  <style type="text/tailwindcss">
     @layer theme {
-        :root {
-            --primary-color: #10b981;
-            --secondary-color: #059669;
-            --accent-color: #34d399;
-            --background: #ffffff;
-            --surface: #f9fafb;
-            --text-primary: #111827;
-            --text-secondary: #6b7280;
-            --border-color: #e5e7eb;
-        }
+      :root {
+        --primary-color: #10b981;
+        --secondary-color: #059669;
+        --accent-color: #34d399;
+        --background: #ffffff;
+        --surface: #f9fafb;
+        --text-primary: #111827;
+        --text-secondary: #6b7280;
+        --border-color: #e5e7eb;
+      }
     }
 
     @layer base {
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-            color: var(--text-primary);
-            background-color: var(--background);
-        }
+      html, body {
+        margin: 0;
+        padding: 0;
+        min-height: 100%;
+        background-color: var(--background);
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+        color: var(--text-primary);
+        -webkit-font-smoothing: antialiased;
+        -webkit-text-size-adjust: 100%;
+        /* Untuk area layar dengan notch di iPhone */
+        padding-top: env(safe-area-inset-top);
+        padding-bottom: env(safe-area-inset-bottom);
+        scroll-behavior: smooth;
+      }
+
+      img {
+        max-width: 100%;
+        height: auto;
+        display: block;
+      }
+
+      * {
+        box-sizing: border-box;
+      }
     }
 
     @layer components {
-        .btn-primary {
-            @apply px-6 py-3 bg-gradient-to-r from-[var(--primary-color)] to-[var(--secondary-color)] text-white rounded-lg font-semibold hover:shadow-lg hover:scale-105 transition-all duration-300;
-        }
-        .btn-secondary {
-            @apply px-6 py-3 bg-white text-[var(--primary-color)] border-2 border-[var(--primary-color)] rounded-lg font-semibold hover:bg-gradient-to-r hover:from-[var(--primary-color)] hover:to-[var(--secondary-color)] hover:text-white hover:shadow-lg transition-all duration-300;
-        }
-        .card-hover {
-            @apply transition-all duration-300 hover:shadow-2xl hover:-translate-y-2;
-        }
-        .gradient-bg {
-            @apply bg-gradient-to-br from-green-50 via-emerald-50 to-teal-50;
-        }
+      .btn-primary {
+        @apply px-5 sm:px-6 py-3 bg-gradient-to-r from-[var(--primary-color)] to-[var(--secondary-color)]
+        text-white rounded-lg font-semibold hover:shadow-lg hover:scale-105 transition-all duration-300;
+      }
+
+      .btn-secondary {
+        @apply px-5 sm:px-6 py-3 bg-white text-[var(--primary-color)] border-2 border-[var(--primary-color)]
+        rounded-lg font-semibold hover:bg-gradient-to-r hover:from-[var(--primary-color)] hover:to-[var(--secondary-color)]
+        hover:text-white hover:shadow-lg transition-all duration-300;
+      }
+
+      .card-hover {
+        @apply transition-all duration-300 hover:shadow-2xl hover:-translate-y-2;
+      }
+
+      .gradient-bg {
+        @apply bg-gradient-to-br from-green-50 via-emerald-50 to-teal-50;
+      }
+
+      .container-responsive {
+        @apply max-w-screen-xl mx-auto px-4 sm:px-6 md:px-8;
+      }
     }
-    </style>
+
+    /* Responsivitas tambahan */
+    @layer utilities {
+      .text-balance {
+        text-wrap: balance;
+      }
+    }
+  </style>
 </head>
-<body>
-    <div id="root"></div>
-    <script type="text/babel" src="components/Header.js"></script>
-    <script type="text/babel" src="components/Hero.js"></script>
-    <script type="text/babel" src="components/Features.js"></script>
-    <script type="text/babel" src="components/Pricing.js"></script>
-    <script type="text/babel" src="components/Footer.js"></script>
-    <script type="text/babel" src="app.js"></script>
+
+<body class="gradient-bg flex flex-col min-h-screen">
+  <div id="root" class="flex-grow"></div>
+
+  <!-- Script React Components -->
+  <script type="text/babel" src="components/Header.js"></script>
+  <script type="text/babel" src="components/Hero.js"></script>
+  <script type="text/babel" src="components/Features.js"></script>
+  <script type="text/babel" src="components/Pricing.js"></script>
+  <script type="text/babel" src="components/Footer.js"></script>
+  <script type="text/babel" src="app.js"></script>
 </body>
 </html>
