--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <meta 
-        name="viewport" 
-        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
-    >
+    <!-- ✅ Perbaikan untuk responsivitas Android & iPhone -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+
     <title>FinanceFamily - Kelola Keuangan Keluarga Anda</title>
     <meta name="description" content="Aplikasi manajemen keuangan keluarga yang membantu Anda mengelola pemasukan, pengeluaran, anggaran, dan tujuan keuangan dengan mudah">
     <meta name="keywords" content="keuangan keluarga, manajemen keuangan, anggaran, pemasukan, pengeluaran">
@@ -20,73 +19,89 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://resource.trickle.so/vendor_lib/unpkg/lucide-static@0.516.0/font/lucide.css" rel="stylesheet">
 
-    <!-- ✅ Tambahan CSS untuk memperbaiki responsivitas -->
-    <style>
-        html, body {
+    <style type="text/tailwindcss">
+    @layer theme {
+        :root {
+            --primary-color: #10b981;
+            --secondary-color: #059669;
+            --accent-color: #34d399;
+            --background: #ffffff;
+            --surface: #f9fafb;
+            --text-primary: #111827;
+            --text-secondary: #6b7280;
+            --border-color: #e5e7eb;
+        }
+    }
+
+    @layer base {
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+            color: var(--text-primary);
+            background-color: var(--background);
+            /* ✅ Tambahan agar layout aman di semua device */
             margin: 0;
             padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
-            min-height: 100%;
-            width: 100%;
-            overflow-x: hidden;
+            -webkit-font-smoothing: antialiased;
             -webkit-text-size-adjust: 100%;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-            background-color: #ffffff;
-            color: #111827;
+            overflow-x: hidden;
             scroll-behavior: smooth;
         }
 
-        /* ✅ Pastikan elemen tidak terlalu besar di HP */
         img, video, canvas {
             max-width: 100%;
             height: auto;
         }
 
-        /* ✅ Kontainer agar tidak terlalu lebar di layar kecil */
-        .container {
-            max-width: 100%;
-            padding-left: 1rem;
-            padding-right: 1rem;
-        }
-
-        /* ✅ Tambahan untuk padding aman di iPhone dengan notch */
-        @supports (padding: max(0px)) {
-            body {
-                padding-top: max(env(safe-area-inset-top), 0px);
-                padding-bottom: max(env(safe-area-inset-bottom), 0px);
-            }
-        }
-
-        /* ✅ Perbaiki tombol agar tidak terlalu besar di layar kecil */
-        .btn-primary, .btn-secondary {
-            font-size: clamp(14px, 3vw, 16px);
-        }
-
-        /* ✅ Perbaiki tampilan grid dan card agar fleksibel di mobile */
-        .card-hover {
-            transition: all 0.3s ease-in-out;
-        }
-
-        @media (max-width: 640px) {
-            .card-hover {
-                margin-bottom: 1rem;
-            }
-        }
-
-        /* ✅ Pastikan text wrapping di layar kecil */
-        h1, h2, h3, h4, p {
-            word-wrap: break-word;
-        }
-
-        /* ✅ Jaga agar elemen React tidak keluar layar */
         #root {
             width: 100%;
             overflow-x: hidden;
         }
+    }
+
+    @layer components {
+        .btn-primary {
+            @apply px-6 py-3 bg-gradient-to-r from-[var(--primary-color)] to-[var(--secondary-color)] text-white rounded-lg font-semibold hover:shadow-lg hover:scale-105 transition-all duration-300;
+        }
+        .btn-secondary {
+            @apply px-6 py-3 bg-white text-[var(--primary-color)] border-2 border-[var(--primary-color)] rounded-lg font-semibold hover:bg-gradient-to-r hover:from-[var(--primary-color)] hover:to-[var(--secondary-color)] hover:text-white hover:shadow-lg transition-all duration-300;
+        }
+        .card-hover {
+            @apply transition-all duration-300 hover:shadow-2xl hover:-translate-y-2;
+        }
+        .gradient-bg {
+            @apply bg-gradient-to-br from-green-50 via-emerald-50 to-teal-50;
+        }
+
+        /* ✅ Tambahan agar komponen fleksibel di HP */
+        .responsive-container {
+            @apply max-w-screen-xl mx-auto px-4 sm:px-6 lg:px-8;
+        }
+    }
+
+    /* ✅ Tambahan penyesuaian khusus layar kecil */
+    @layer utilities {
+        @media (max-width: 640px) {
+            h1, h2, h3, h4, p {
+                @apply text-center leading-snug;
+            }
+
+            .btn-primary, .btn-secondary {
+                @apply w-full text-sm py-3;
+            }
+
+            .card-hover {
+                @apply mb-4;
+            }
+
+            section, header, footer {
+                @apply px-4;
+            }
+        }
+    }
     </style>
 </head>
 <body>
     <div id="root"></div>
-
     <script type="text/babel" src="components/Header.js"></script>
     <script type="text/babel" src="components/Hero.js"></script>
     <script type="text/babel" src="components/Features.js"></script>
