--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
   <title>FinanceFamily - Kelola Keuangan Keluarga Anda</title>
-  <meta name="description" content="Aplikasi manajemen keuangan keluarga yang membantu Anda mengelola pemasukan, pengeluaran, anggaran, dan tujuan keuangan dengan mudah">
-  <meta name="keywords" content="keuangan keluarga, manajemen keuangan, anggaran, pemasukan, pengeluaran">
-  <meta property="og:title" content="FinanceFamily - Kelola Keuangan Keluarga Anda">
-  <meta property="og:description" content="Aplikasi manajemen keuangan keluarga yang membantu Anda mengelola pemasukan, pengeluaran, anggaran, dan tujuan keuangan dengan mudah">
-  <meta name="twitter:title" content="FinanceFamily - Kelola Keuangan Keluarga Anda">
-  <meta name="twitter:description" content="Aplikasi manajemen keuangan keluarga yang membantu Anda mengelola pemasukan, pengeluaran, anggaran, dan tujuan keuangan dengan mudah">
+  <meta name="description" content="Aplikasi manajemen keuangan keluarga yang membantu Anda mengelola pemasukan, pengeluaran, anggaran, dan tujuan keuangan dengan mudah" />
+  <meta name="keywords" content="keuangan keluarga, manajemen keuangan, anggaran, pemasukan, pengeluaran" />
+  <meta property="og:title" content="FinanceFamily - Kelola Keuangan Keluarga Anda" />
+  <meta property="og:description" content="Aplikasi manajemen keuangan keluarga yang membantu Anda mengelola pemasukan, pengeluaran, anggaran, dan tujuan keuangan dengan mudah" />
+  <meta name="twitter:title" content="FinanceFamily - Kelola Keuangan Keluarga Anda" />
+  <meta name="twitter:description" content="Aplikasi manajemen keuangan keluarga yang membantu Anda mengelola pemasukan, pengeluaran, anggaran, dan tujuan keuangan dengan mudah" />
 
   <script src="https://resource.trickle.so/vendor_lib/unpkg/react@18/umd/react.production.min.js"></script>
   <script src="https://resource.trickle.so/vendor_lib/unpkg/react-dom@18/umd/react-dom.production.min.js"></script>
   <script src="https://resource.trickle.so/vendor_lib/unpkg/@babel/standalone/babel.min.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://resource.trickle.so/vendor_lib/unpkg/lucide-static@0.516.0/font/lucide.css" rel="stylesheet">
+  <link href="https://resource.trickle.so/vendor_lib/unpkg/lucide-static@0.516.0/font/lucide.css" rel="stylesheet" />
 
   <style type="text/tailwindcss">
     @layer theme {
@@ -32,10 +32,10 @@
     }
 
     @layer base {
-      body {
+      html, body {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-        color: var(--text-primary);
         background-color: var(--background);
+        color: var(--text-primary);
         margin: 0;
         padding: 0;
         overflow-x: hidden;
@@ -57,56 +57,66 @@
       }
     }
 
-    /* 🔧 RESPONSIVE SETTINGS UNTUK ANDROID & IPHONE */
-    @media (max-width: 1024px) {
+    /* --- RESPONSIVE FIX UNTUK ANDROID & IPHONE --- */
+    @media screen and (max-width: 1024px) {
+      header, nav {
+        flex-direction: column !important;
+        text-align: center !important;
+        gap: 0.5rem !important;
+      }
+      section, main, footer {
+        padding-left: 1rem !important;
+        padding-right: 1rem !important;
+      }
+      .grid {
+        grid-template-columns: 1fr !important;
+      }
+    }
+
+    @media screen and (max-width: 768px) {
       html, body {
         font-size: 15px;
       }
 
-      section, div, main {
-        padding-left: 1rem !important;
-        padding-right: 1rem !important;
-      }
-
-      img, video {
-        max-width: 100%;
-        height: auto;
-      }
-    }
-
-    @media (max-width: 768px) {
-      .btn-primary, .btn-secondary {
-        @apply w-full text-center text-sm py-2 px-4;
-      }
-
-      header, nav {
-        flex-direction: column !important;
-        align-items: center !important;
-        text-align: center;
-      }
-
       h1, h2, h3 {
         font-size: 1.25rem !important;
-        line-height: 1.5rem !important;
         text-align: center;
       }
 
       p {
-        font-size: 0.9rem !important;
+        font-size: 0.95rem !important;
         text-align: center;
       }
 
+      .btn-primary, .btn-secondary {
+        width: 100%;
+        text-align: center;
+        padding: 0.75rem 1rem;
+        font-size: 0.9rem;
+      }
+
       .card-hover {
-        @apply w-full mb-4;
+        width: 100% !important;
+        margin-bottom: 1rem;
+      }
+
+      img, video {
+        width: 100%;
+        height: auto;
       }
 
       footer {
         text-align: center !important;
-        padding: 1.5rem 1rem;
+        padding: 2rem 1rem;
+      }
+
+      .container, .content {
+        width: 100% !important;
+        margin: 0 auto !important;
       }
     }
 
-    @media (max-width: 480px) {
+    @media screen and (max-width: 480px) {
       html, body {
         font-size: 14px;
       }
@@ -115,13 +125,31 @@
         font-size: 1.1rem !important;
       }
 
-      .btn-primary, .btn-secondary {
-        font-size: 0.85rem;
-        padding: 0.75rem 1.25rem;
+      h2, h3 {
+        font-size: 1rem !important;
       }
 
-      .card-hover {
-        margin-bottom: 1rem;
+      .btn-primary, .btn-secondary {
+        font-size: 0.85rem !important;
+        padding: 0.75rem 1rem !important;
+      }
+
+      header, nav {
+        flex-wrap: wrap !important;
+        gap: 0.5rem !important;
+      }
+
+      .hero-text, .feature-text {
+        text-align: center !important;
+      }
+    }
+
+    /* --- FIX SAFE AREA iPHONE (NOTCH) --- */
+    @supports (padding: max(0px)) {
+      body {
+        padding-left: env(safe-area-inset-left);
+        padding-right: env(safe-area-inset-right);
+        padding-bottom: env(safe-area-inset-bottom);
       }
     }
   </style>
