--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FinanceFamily - Kelola Keuangan Keluarga Anda</title>
   <meta name="description" content="Aplikasi manajemen keuangan keluarga yang membantu Anda mengelola pemasukan, pengeluaran, anggaran, dan tujuan keuangan dengan mudah" />
   <meta name="keywords" content="keuangan keluarga, manajemen keuangan, anggaran, pemasukan, pengeluaran" />
@@ -32,10 +32,10 @@
     }
 
     @layer base {
-      html, body {
+      body {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-        background-color: var(--background);
         color: var(--text-primary);
+        background-color: var(--background);
         margin: 0;
         padding: 0;
         overflow-x: hidden;
@@ -57,35 +57,34 @@
       }
     }
 
-    /* --- RESPONSIVE FIX UNTUK ANDROID & IPHONE --- */
-    @media screen and (max-width: 1024px) {
-      header, nav {
-        flex-direction: column !important;
-        text-align: center !important;
-        gap: 0.5rem !important;
-      }
-      section, main, footer {
-        padding-left: 1rem !important;
-        padding-right: 1rem !important;
-      }
-      .grid {
-        grid-template-columns: 1fr !important;
-      }
-    }
-
-    @media screen and (max-width: 768px) {
+    /* ✅ FIX: Responsif untuk HP tanpa mengubah tampilan desktop */
+    @media (max-width: 768px) {
       html, body {
         font-size: 15px;
       }
 
+      header, nav {
+        flex-direction: column !important;
+        align-items: center !important;
+        text-align: center !important;
+        gap: 0.5rem !important;
+      }
+
+      main, section, footer, .container, .content {
+        padding-left: 1rem !important;
+        padding-right: 1rem !important;
+        width: 100% !important;
+        margin: 0 auto !important;
+      }
+
       h1, h2, h3 {
-        font-size: 1.25rem !important;
-        text-align: center;
+        font-size: 1.2rem !important;
+        text-align: center !important;
       }
 
       p {
         font-size: 0.95rem !important;
-        text-align: center;
+        text-align: center !important;
       }
 
       .btn-primary, .btn-secondary {
@@ -95,28 +94,28 @@
         font-size: 0.9rem;
       }
 
+      .grid, .flex {
+        flex-direction: column !important;
+        grid-template-columns: 1fr !important;
+      }
+
+      img, video {
+        width: 100% !important;
+        height: auto !important;
+      }
+
       .card-hover {
         width: 100% !important;
         margin-bottom: 1rem;
       }
 
-      img, video {
-        width: 100%;
-        height: auto;
-      }
-
       footer {
         text-align: center !important;
-        padding: 2rem 1rem;
-      }
-
-      .container, .content {
-        width: 100% !important;
-        margin: 0 auto !important;
+        padding: 2rem 1rem !important;
       }
     }
 
-    @media screen and (max-width: 480px) {
+    @media (max-width: 480px) {
       html, body {
         font-size: 14px;
       }
@@ -133,18 +132,9 @@
         font-size: 0.85rem !important;
         padding: 0.75rem 1rem !important;
       }
-
-      header, nav {
-        flex-wrap: wrap !important;
-        gap: 0.5rem !important;
-      }
-
-      .hero-text, .feature-text {
-        text-align: center !important;
-      }
     }
 
-    /* --- FIX SAFE AREA iPHONE (NOTCH) --- */
+    /* ✅ Tambahan untuk iPhone Notch */
     @supports (padding: max(0px)) {
       body {
         padding-left: env(safe-area-inset-left);
